...
    @IBOutlet private weak var webView: WKWebView!
    @IBOutlet private weak var progressView: UIProgressView!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        estimatedProgressObservation = webView.observe(
        \.estimatedProgress,
        options: [],
        changeHandler: { [weak self] _, _ in
            guard let self = self else { return }
...
